--- a/Numadic/test-output/index.html
+++ b/Numadic/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Regression_Suite" class="navigator-link ">
-                    <span>C:\Users\rahul\eclipse-workspace\Numadic\testng.xml</span>
+                    <span>C:\Users\rahul\git\numadicAssignment\Numadic\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Regression_Suite -->
         <div panel-name="test-xml-Regression_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rahul\eclipse-workspace\Numadic\testng.xml</span>
+            <span class="header-content">C:\Users\rahul\git\numadicAssignment\Numadic\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -193,7 +193,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'careerPageScript')
 data.setCell(0, 2, 'com.numadic.QAtests.TestCase1')
-data.setCell(0, 3, 15262);
+data.setCell(0, 3, 15852);
 window.suiteTableData['Regression_Suite']= { tableData: data, tableDiv: 'times-div-Regression_Suite'}
 return data;
 }
@@ -231,19 +231,19 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethodMethod(chrome)</span>
-                <span class="method-start">497 ms</span>
+                <span class="method-start">499 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">careerPageScript</span>
-                <span class="method-start">12728 ms</span>
+                <span class="method-start">21105 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethodMethod([TestResult name=careerPageScript status=SUCCESS method=TestCase1.careerPageScript()[pri:0, instance...)</span>
-                <span class="method-start">28010 ms</span>
+                <span class="method-start">36968 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTestMethod</span>
-                <span class="method-start">28921 ms</span>
+                <span class="method-start">37420 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
