--- a/Numadic/test-output/old/Regression_Suite/methods-alphabetical.html
+++ b/Numadic/test-output/old/Regression_Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression_Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aeb071">  <td>23/08/06 13:22:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@7bd7d6d6]">&lt;&lt;afterMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1365767549</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>23/08/06 13:22:31</td>   <td>903</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@7bd7d6d6]">&lt;&lt;afterTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1365767549</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>23/08/06 13:22:02</td>   <td>-27519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@7bd7d6d6]">&gt;&gt;beforeMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1365767549</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>23/08/06 13:22:02</td>   <td>-27991</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@7bd7d6d6]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1365767549</td>   <td></td> </tr>
-<tr bgcolor="84a48c">  <td>23/08/06 13:22:15</td>   <td>-15291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@7bd7d6d6]">careerPageScript</td> 
-  <td>main@1365767549</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/27 22:20:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@4d1c005e]">&lt;&lt;afterMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@702025003</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/27 22:20:11</td>   <td>452</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@4d1c005e]">&lt;&lt;afterTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@702025003</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/27 22:19:34</td>   <td>-36466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@4d1c005e]">&gt;&gt;beforeMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@702025003</td>   <td></td> </tr>
+<tr bgcolor="c799b1">  <td>23/09/27 22:19:34</td>   <td>-36958</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@4d1c005e]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@702025003</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>23/09/27 22:19:55</td>   <td>-15864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@4d1c005e]">careerPageScript</td> 
+  <td>main@702025003</td>   <td></td> </tr>
 </table>
