--- a/Numadic/reports/ExtentReport.html
+++ b/Numadic/reports/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation test result by Rahul</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 24, 2024 11:57:08 pm</span></a>
+<a href="#"><span class="badge badge-primary">Jan 27, 2025 11:16:49 AM</span></a>
 </li>
 </ul>
 </div>
@@ -66,7 +66,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
+<a class="dropdown-item" status="skip" href="#"><span>Skip</span><span class="status warning"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -74,25 +74,25 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="skip" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">TestCase1</p>
             <p class="text-sm">
-              <span>11:57:09 pm</span> / <span>00:00:28:347</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>11:16:49 AM</span> / <span>00:00:34:809</span>
+              <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">TestCase1</h5>
-<span class='badge badge-success'>04.24.2024 11:57:09 pm</span>
-<span class='badge badge-danger'>04.24.2024 11:57:37 pm</span>
-<span class='badge badge-default'>00:00:28:347</span>
+<h5 class="test-status text-skip">TestCase1</h5>
+<span class='badge badge-success'>01.27.2025 11:16:49 AM</span>
+<span class='badge badge-danger'>01.27.2025 11:17:24 AM</span>
+<span class='badge badge-default'>00:00:34:809</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,31 +104,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>11:57:24 pm</td>
+        <td>11:17:24 AM</td>
         <td>
           <span class='badge white-text orange'>careerPageScript - Test Case Skipped</span>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:57:37 pm</td>
-        <td>
-          <span class='badge white-text red'>careerPageScript - Test Case Failed</span>
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:57:37 pm</td>
-        <td>
-          <span class='badge white-text red'>org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element <span class="lyteDropPlaceholderNormal">...</span> is not clickable at point (368, 537). Other element would receive the click: <p class="cw-apply-note">...</p>
-  (Session info: chrome=124.0.6367.61)
-Build info: version: '4.19.1', revision: 'abe0ee07dc'
-System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.8.1'
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [85be14a55f71da1ce238faddad3ca2d4, clickElement {id=f.82C4D4A82E1C5086AD576DBFA078CC54.d.EB25E7AE59A6CD6DD70357A0622C8D46.e.90}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 124.0.6367.61, chrome: {chromedriverVersion: 124.0.6367.78 (a087f2dd364d..., userDataDir: C:\Users\61053553\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:62628}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:62628/devtoo..., se:cdpVersion: 124.0.6367.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (85be14a55f71da1ce238faddad3ca2d4)] -> xpath: //lyte-drop-button[@data-zcqa='manual_Salutation']//span[@class='lyteDropPlaceholderNormal'][normalize-space()='-None-']]
-Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
         </td>
       </tr>
   </tbody>
@@ -150,13 +128,13 @@ Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 24, 2024 11:57:08 pm</h3>
+<h3>Jan 27, 2025 11:16:49 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 24, 2024 11:57:37 pm</h3>
+<h3>Jan 27, 2025 11:17:28 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -168,7 +146,7 @@ Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Tests Failed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -189,8 +167,8 @@ Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
 </small>
 </div>
 <div>
-<small data-tooltip='100%'><b>1</b> tests failed,
-<b>0</b> skipped, <b data-tooltip='0%'>0</b> others
+<small data-tooltip='0%'><b>0</b> tests failed,
+<b>1</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
 </div>
@@ -209,7 +187,7 @@ Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
 <div class="card-footer">
 <div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 <div>
-<small data-tooltip='66%'><b>2</b> events failed,
+<small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>1</b> others
 </small>
 </div>
@@ -226,7 +204,7 @@ Session ID: 85be14a55f71da1ce238faddad3ca2d4 - Test Case Failed</span>
 </div></div>
 <script>
 var timeline = {
-"TestCase1":28.347
+"TestCase1":34.809
 };
 </script>
 <div class="row">
@@ -242,7 +220,7 @@ var timeline = {
 </tr>
 <tr>
 <td>UserName</td>
-<td>61053553</td>
+<td>conta</td>
 </tr>
 </tbody>
 </table></div>
@@ -254,9 +232,9 @@ var timeline = {
 var statusGroup = {
 parentCount: 5,
 passParent: 0,
-failParent: 1,
+failParent: 0,
 warningParent: 0,
-skipParent: 0,
+skipParent: 1,
 childCount: 5,
 passChild: 0,
 failChild: 0,
@@ -271,7 +249,7 @@ skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
 passEvents: 0,
-failEvents: 2,
+failEvents: 0,
 warningEvents: 0,
 skipEvents: 1,
 infoEvents: 0
